--- a/css/home.css
+++ b/css/home.css
@@ -73,7 +73,7 @@
         nav ul li a:hover::after {
             width: 100%;
         }
-
+     /*home*/
         .hero {
             display: flex;
             align-items: center;
@@ -183,6 +183,7 @@
             height: 100%;
             object-fit: cover;
         }
+             /*about*/
               .about-section {
             background: linear-gradient(135deg, #e0f7fa, #ffffff);
             min-height: 100vh;
@@ -243,7 +244,7 @@
             margin-right: 10px;
             margin-bottom: 10px;
         }
-
+     /*skills*/
         .skills-section {
             background: #f9f9f9;
             padding: 80px 10%;
@@ -280,6 +281,7 @@
             height: 50px;
             margin-bottom: 10px;
         }
+             /*Project*/
         .projects-section {
             padding: 100px 10%;
             text-align: center;
@@ -311,7 +313,7 @@
         .project-item:hover img {
             opacity: 0.3;
         }
-        
+             /*contact*/
         .contact-section {
             background: linear-gradient(135deg, #e0f7fa, #ffffff);
             padding: 100px 10%;
@@ -365,7 +367,7 @@
             background: #e0564b;
             transform: translateY(-3px);
         }
-        
+        /*Footer*/
         footer {
             background: linear-gradient(135deg, #e0f7fa, #ffffff);
             padding: 60px 10%;
